MODELER-568 : corrected css to remove unneeded scrollbars in forgot password page

--- a/workspace/wilbal/Designer_ProInstaller_1_0_14_MODELER-568/war/resources/css/loginPage.css
+++ b/workspace/wilbal/Designer_ProInstaller_1_0_14_MODELER-568/war/resources/css/loginPage.css
@@ -55,7 +55,6 @@ body {
 .forget{
 	margin:89px auto;
 	width:683px;
-	height:939px;
 	overflow:hidden;
 }
 
